feat: Week 1 完整实现 - PekkoGc全局唯一组件与多节点集群架构
🎯 核心功能
- ✅ 实现基于Leader选举的PekkoGc全局唯一GC组件
- ✅ 完成多节点集群环境验证和测试
- ✅ 升级JDK 11环境并解决兼容性问题
- ✅ 建立完整的HTTP监控和健康检查体系

🚀 技术亮点
- PekkoGc: 使用PNCounter分布式计数器，支持自动故障转移
- Leader选举机制: 替代ClusterSingleton，优化单节点启动性能
- 多节点支持: 动态端口配置，种子节点自动发现
- 监控体系: API状态、健康检查、集群指标、GC日志

📊 架构改进
- 重构PekkoServer启动流程，支持多节点参数
- 优化PekkoGuardian，实现智能Leader管理
- 完善HTTP路由设计，支持Kubernetes探针
- 增强集群监听器，实时状态追踪

🔧 配置优化
- application.conf: 添加GC限制和集群配置
- build.sbt: JDK 11升级和JVM GC日志配置
- 多节点启动脚本和Docker支持

📖 文档完善
- 更新README: 添加快速开始指南和API文档
- 完善Day1技术总结: 详细的PekkoGc实现说明
- 新增项目规划: Day1架构设计和Day2任务调度计划

🧪 测试验证
- 单节点环境: PekkoGc正常启动和执行GC
- 多节点环境: Leader/Follower角色正确分配
- 故障转移: Leader变更时PekkoGc自动迁移
- HTTP端点: 所有API正常响应

Breaking Changes:
- PekkoServer启动参数支持端口配置
- 集群最小成员数调整为1（支持单节点）

🔗 相关文件:
- pekko-server/src/main/scala/cn/xuyinyin/magic/single/PekkoGc.scala
- pekko-server/src/main/scala/cn/xuyinyin/magic/cluster/PekkoGuardian.scala
- pekko-server/src/main/scala/cn/xuyinyin/magic/server/PekkoClusterService.scala
- README.md, build.sbt, application.conf
- plan/DAY1_TECHNICAL_SUMMARY.md